--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,7 +41,13 @@ body {
   /* margin-top: -140px; */
   margin-bottom:0px;
 }
-
+.live_events{
+  padding: 5px;
+  background-color: rgb(255, 221, 0);
+  height: 35px;
+  width: 35px;
+  border-radius: 100%;
+}
 
 body {
   font-family: "Prompt", sans-serif;
