updated booked fuction

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,8 +16,9 @@ body {
   margin: 0;
   padding: 0;
 }
-.banner_title{
-
+.body_msg{
+  margin-top: 70px;
+  margin-left: 100px;
 }
 .mini{
   margin-top:-100px;
@@ -33,19 +34,18 @@ body {
   background-color: azure;
   margin: 5px;
   text-decoration: none;
+
   /* display:block; */
+}
 
-}
-.nav_bar{
-  /* border: 1px solid red; */
-  /* margin-top: -140px; */
-  margin-bottom:0px;
-}
+
 .live_events{
-  padding: 10px;
-  background-color: rgb(255, 221, 0);
 
-  border-radius:100%;
+  text-decoration: underline var(--color-accent);
+
+  /* padding: 10px;
+  background-color: rgb(255, 221, 0);
+  border-radius:100%; */
 
 }
 
@@ -75,6 +75,7 @@ h4 {
   background-color:var(--theme-primary);
   border: none;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  margin-right: 5px;
 }
 
 header {
