--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,6 +22,7 @@ body {
 }
 .mini{
   margin-top:-100px;
+  /* background-color: red; */
 }
 .banner{
   display: flex;
@@ -76,6 +77,19 @@ h4 {
   border: none;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   margin-right: 5px;
+}
+.error-msg{
+  border: 1px solid red;
+  background-color: antiquewhite;
+  text-align: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+
 }
 
 header {
