--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,9 @@
 
 /* css variables for theming */
 :root {
-  --main-bg-color: rgb(201, 236, 213);
+  --main-bg-color: #ebeff2;
   --main-font-color: rgb(0, 0, 0);
-  --theme-primary: rgb(27, 254, 156);
+  --theme-primary: #194761;
   --color-accent: rgb(250, 172, 4);
 }
 
@@ -15,6 +15,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  color: #000;
 }
 .body_msg{
   margin-top: 70px;
@@ -24,6 +25,20 @@ body {
   margin-top:-100px;
   /* background-color: red; */
 }
+.action-btn{
+  margin-right: 15px;
+  border-radius: 5px;
+  background-color: #ebeff2;
+  color: #194761;
+  font-weight: 600;
+  
+}
+.action-btn:hover{
+  background-color: #194761;
+  color: #fff;
+}
+
+
 .banner{
   display: flex;
   flex-direction: row;
@@ -77,6 +92,12 @@ h4 {
   border: none;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   margin-right: 5px;
+  color: #fff;
+  border-radius: 5px;
+}
+
+.error-text{
+  color: red;
 }
 .error-msg{
   border: 1px solid red;
@@ -84,10 +105,12 @@ h4 {
   text-align: center;
   margin-bottom: 10px;
   margin-top: 10px;
-  height: 40px;
+  height: 40px; 
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-bottom: 5px;
+  flex-direction: column;
 
 
 }
@@ -100,11 +123,12 @@ header {
   align-items: center;
   padding: 0.75rem;
   background-color: var(--theme-primary);
-  color: var(--main-font-color);
+  color: #fff;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 .heading{
   display:block;
+  margin-bottom: 20px;
 }
 .sub_heading{
   display:block;
@@ -192,17 +216,45 @@ main {
 .star-rating .background {
   display: flex;
 }
+.form_container{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  border: 1px solid red;
+  margin-top: 100px;
+}
+.new_event{
+  width: 100%;
+}
 
 form {
   display: flex;
   flex-direction: column;
+  width: 50%;
+
 }
 
 form input,
 form textarea {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.7rem;
+  border: 1px solid grey;
+  padding: 5px;
+  border-radius: 5px;
+ 
 }
 
 form button[type="submit"] {
-  width: 150px;
+  width: 60px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid grey;
+}
+@media screen and (max-width:600px) {
+
+  .heading{
+    display:block;
+    margin-bottom: 5px;
+  }
+
+  
 }
