--- a/client/src/index.css
+++ b/client/src/index.css
@@ -220,7 +220,7 @@ main {
   display: flex;
   justify-content: center;
   width: 100%;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   margin-top: 100px;
 }
 .new_event{
